ecs-fargate/ecs.tf
resource "aws_ecs_cluster" "main" {
  name = "${var.app_name}-cluster"
}

#ECS Task definition
# resource "aws_ecs_task_definition" "task" {
#   family                = "${var.app_name}-task-01"
#   execution_role_arn    = aws_iam_role.ecs_task_execution_role.arn
#   task_role_arn         = aws_iam_role.ecs_task_role.arn
#   network_mode          = "awsvpc"
#   requires_compatibilities = ["FARGATE"]
#   cpu                   = "256"
#   memory                = "512"

#   container_definitions = jsonencode([
#   {
#     name      = var.app_name
#     image     = "${aws_ecr_repository.simpletimeservice.repository_url}:${var.image_tag}"
#     cpu       = 256
#     memory    = 512
#     essential = true
#     portMappings = [{
#       containerPort = var.container_port
#       hostPort      = var.container_port
#       protocol      = "tcp"
#     }]
#     logConfiguration = {
#       logDriver = "awslogs"
#       options = {
#         awslogs-group         = aws_cloudwatch_log_group.ecs_log_group.name
#         awslogs-region        = "us-east-1"
#         awslogs-stream-prefix = "ecs"
#       }
#     }
#     mountPoints = [
#       {
#         sourceVolume  = "shared-volume"
#         containerPath = "/app"
#       }
#     ]
#   },
#   {
#     name      = "trivy-sidecar"
#     image     = "aquasec/trivy:latest"
#     cpu       = 128
#     memory    = 256
#     essential = false
#     command   = ["sh", "-c", "trivy fs --exit-code 0 --severity HIGH,CRITICAL /app && sleep 10"]
#     mountPoints = [
#       {
#         sourceVolume  = "shared-volume"
#         containerPath = "/app"
#       }
#     ]
#     logConfiguration = {
#       logDriver = "awslogs"
#       options = {
#         awslogs-group         = aws_cloudwatch_log_group.ecs_log_group.name
#         awslogs-region        = "us-east-1"
#         awslogs-stream-prefix = "trivy"
#       }
#     }
#   }
# ])
# # ✅ Volume definition to support shared mountPoints
#   volume {
#     name = "shared-volume"
#   }
#   depends_on = [aws_security_group.ecs_sg]
# }

resource "aws_ecs_task_definition" "task" {
  family                   = "static-web-host-new-task-01"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "512"
  memory                   = "1024"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
  task_role_arn            = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([
    {
      name      = var.app_name
      image     = "${aws_ecr_repository.simpletimeservice.repository_url}:${var.image_tag}"
      cpu       = 256
      memory    = 512
      essential = true
      portMappings = [{
        containerPort = var.container_port
        hostPort      = var.container_port
        protocol      = "tcp"
      }]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.ecs_log_group.name
          awslogs-region        = "us-east-1"
          awslogs-stream-prefix = "ecs"
        }
      }
      mountPoints = [
        {
          sourceVolume  = "shared-volume"
          containerPath = "/app"
        }
      ]
    },
    {
      name      = "trivy-sidecar"
      image     = "aquasec/trivy:latest"
      cpu       = 128
      memory    = 256
      essential = false
      command   = ["sh", "-c", "trivy fs --exit-code 0 --severity HIGH,CRITICAL /app && sleep 10"]
      mountPoints = [
        {
          sourceVolume  = "shared-volume"
          containerPath = "/app"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.ecs_log_group.name
          awslogs-region        = "us-east-1"
          awslogs-stream-prefix = "trivy"
        }
      }
    }
  ])

  volume {
    name = "shared-volume"
  }
  depends_on = [aws_security_group.ecs_sg]
}


#ECS
resource "aws_ecs_service" "service" {
  name            = "${var.app_name}-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    #subnets         = var.subnet_ids
    subnets = [aws_subnet.private[0].id, aws_subnet.private[1].id]
    security_groups = [aws_security_group.ecs_sg.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.blue.arn
    container_name   = var.app_name
    container_port   = var.container_port
  }
  depends_on = [
    aws_lb_listener.https_forward
  ]
}


# Target for ECS Service autoscaling (task count)
resource "aws_appautoscaling_target" "ecs" {
  max_capacity       = 4                         # Max tasks allowed
  min_capacity       = 1                         # Min tasks running at all times
  resource_id        = "service/${aws_ecs_cluster.main.name}/${aws_ecs_service.service.name}"
  scalable_dimension = "ecs:service:DesiredCount"
  service_namespace  = "ecs"
}

# Autoscaling policy based on average CPU utilization
resource "aws_appautoscaling_policy" "cpu_policy" {
  name               = "${var.app_name}-cpu-scaling"
  policy_type        = "TargetTrackingScaling"
  resource_id        = aws_appautoscaling_target.ecs.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs.service_namespace

  target_tracking_scaling_policy_configuration {
    target_value       = 50.0
    predefined_metric_specification {
      predefined_metric_type = "ECSServiceAverageCPUUtilization"
    }
    scale_in_cooldown  = 60
    scale_out_cooldown = 60
  }
}
